# local-code

./: .gitignore  README.md  api-spec.md  install.bat  install.ps1  llmcode.bat  plan.md
.claude/: settings.local.json
client/: agent.py  api_client.py  chunker.py  claude_client.py  cli.py  config.py  display.py  pyproject.toml  requirements.txt  scanner.py  storage.py  tools.py  updater.py  version.py
docs/: client-setup.md  macbook-deploy.md
installer/: build.py  installer.py  llmcode-setup.spec  uninstaller.py
server/: .env.example  auth.py  config.py  main.py  ollama_client.py  requirements.txt
server/routes/: analyze.py  chat.py  embed.py  health.py
