[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmcode"
version = "0.1.0"
description = "Local LLM Code Assistant CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.26.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "chromadb>=0.4.22",
]

[project.scripts]
llmcode = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
